[package]
name = "silicene_channel"
version = "0.1.0"
edition = "2021"
authors = ["Frosttoys <Frosttoys@burner.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-cpuid = "10.3"
bitflags = "1.3"

[dev-dependencies]
loom = "0.5"